created footer section and enabled google font link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Rubik+Doodle+Shadow&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Doodle+Shadow&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -17,10 +17,10 @@
             </div>
             <div class="navbarright">
             <ul>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Academics</a></li>
-                <li><a href="#">Certification</a></li>
-                <li><a href="#">About Me</a></li>
+                <li><a href="index2.html" target="_blank">Skills</a></li>
+                <li><a href="index2.html" target="_blank">Academics</a></li>
+                <li><a href="index2.html" target="_blank">Certification</a></li>
+                <li><a href="index2.html" target="_blank">About Me</a></li>
             </ul>
         </div>
         </nav>
@@ -169,16 +169,38 @@
                 <h2 class="certification-heading heading center">SQL</h2>
             </div>
             <div class="certificationistitem">
-                <a href="https://www.hackerrank.com/certificates/24b9d347325f" target="_blank"><img src="img/certificate.png" alt="DSA Certification"></a>
+                <a href="https://www.hackerrank.com/certificates/24b9d347325f" target="_blank"><img src="img/DSAcertificate.jpg" alt="DSA Certification"></a>
                 <br>
                 <h2 class="certification-heading heading center">DSA</h2>
             </div>
-            <div class="certificationistitem">
-                <a href="https://www.hackerrank.com/certificates/24b9d347325f" target="_blank"><img src="img/certificate.png" alt="IOTCertification"></a>
-                <br>
-                <h2 class="certification-heading heading center">IOT</h2>
-            </div>
         </section>
     </main>
+    <footer>
+        <section id="footer">
+            <div id="topbox">
+                <div class="topboxitem center heading2">Start a project</div>
+                <div class="topboxitem subheading center ">Interested in working together? We should queue up a time to chat. I'll buy the coffee</div>
+                <div class="topboxitem">
+                    <a href="index2.html" target="_blank"><button class="btn">
+                        Let's do it
+                    </button>
+                </a>
+                </div>
+            </div>
+            <div id="lowerbox">
+                <div class="lowerboxitem">
+                    <h2 class="heading2">
+                        Living, learning, & leveling up one day at a time.
+                    </h2>
+                </div>
+                <div class="lowerboxitem">
+                    <h2 class="subheading center">
+                        © Copyright STEATH. All Right Reserved <br>
+                        Designed by Sameer Dawood Khan
+                    </h2>
+                </div> 
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
