comments dsa certificate part

--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
                 <br>
                 <h2 class="certification-heading heading center">SQL</h2>
             </div>
-            <div class="certificationistitem">
+            <!-- <div class="certificationistitem">
                 <a href="https://www.hackerrank.com/certificates/24b9d347325f" target="_blank"><img src="img/DSAcertificate.jpg" alt="DSA Certification"></a>
                 <br>
                 <h2 class="certification-heading heading center">DSA</h2>
-            </div>
+            </div> -->
         </section>
     </main>
     <footer>
