added responsiveness a little bit and added subheading in the home academics and skills

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Steath-A Hustler</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 1170px)" href="css/phone.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Doodle+Shadow&display=swap" rel="stylesheet">
@@ -142,9 +143,9 @@
                 </div>
             </div>
             <div class="prevnext">
-                <div><a href="#s3">></a><a href="#s2">></a></div>
-                <div><a href="#s1">></a><a href="#s3">></a></div>
-                <div><a href="#s2">></a><a href="#s1">></a></div>
+                <div><a href="#s3"></a><a href="#s2"></a></div>
+                <div><a href="#s1"></a><a href="#s3"></a></div>
+                <div><a href="#s2"></a><a href="#s1"></a></div>
             </div>
             <div class="bullets">
                 <a href="#s1">1</a>
