--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,6 @@
     <title>Sorry</title>
 </head>
 <body>
-    <h1>Developer is busy in playing video games, </h1>
+    <h1>Developer is busy in playing video games, no </h1>
 </body>
 </html>
